=========
Changelog
=========

1.0b4 (unreleased)
==================

- Fix #12679: make timeouts configurable.

- Removed re-imports from batou main module to support light-weight
  self-installation and bootstrapping. I.e. 'from batou import Component' no
  longer works.

- Provide a single main command together with a 'bootstrap' wrapper that you
  can check into your project and that is maintained during updates
  automatically. It also provides fully automatic bootstrapping, installation,
  upgrading and other maintenance.

- Fix Python package installation version check.

- Don't use `bin/buildout bootstrap` command anymore. PIP installs a sufficient
  `bin/buildout` so buildout can do the rest internally.

- Install zc.buildout during bootstrapping phase using PIP to avoid
  bootstrap.py problems.

- Shorten URLs in the Build component to their basename.

- Add 'assert_cmd' API to support simpler assertions for verify when needing to
  check the result of an external command.

- Switch to asking pip installing eggs instead of flat installations as
  namespaces seem to collide otherwise.

- Remove non-functional deprecated 'md5sum' attribute.

- Components are context managers now. If you provide __enter__ it will be
  called before verify() and if you provide __exit__ this will be called after
  update (always - even if update isn't actually called). This allows you to
  manage temporary state on the target system more gracefully. See the
  DMGExtractor for an example.

- Major refactoring of internal data structures to simplify and improve test
  coverage. Some breakage to be expected:

  * Components do not have a 'service' attribute any longer. If you need access
    to the service base directory use 'environment.base_dir'.

- Another attempt at getting convergency for package installation: actually
  leverage pkg_resources to check what version of a package is installed. PIP
  does not necessarily list or freeze setuptools, even if forced to reinstall.
